# shutils

./: .bash_profile  .bashrc  .gitattributes  .gitconfig  .gitignore  .graphqlrc  .lessfilter  .nanorc  .npmrc  .shellcheckrc  CodeFormatting.psd1  LICENSE  Makefile  Microsoft.PowerShell_profile.ps1  README.md  go.mod  main.go  package.json  pnpm-lock.yaml  pyproject.toml  shutils.slnx  stripAnsi.ts  stylua.toml  tools.sh  update  wish.slnx
LSColors/: LSColors.cs
Settings/: CodeFormatting.psd1
_/: .bash_profile  .bashrc  .env  .fonts.conf  .gitconfig  .inputrc
awk/: test.awk
bash/: .bashrc  base.sh  bind.sh  complete.sh  fzf-bind.sh  fzf-hist.awk  fzf.sh  gh-copilot.sh  inspect.sh  prompt.sh  z.py  z.sh
cmd/: fork.c
comp/: nix-build.bash  nix-prefetch-url.bash  update.bash
config/: theme.sh
configurations/: configuration.dsc.yml  fedora-42-apps.dsc.yml  fedora-42-configs.dsc.yml  fedora-42-once.dsc.yml  fedora-42.dsc.yml  win10-apps.dsc.yml  win10-configs.dsc.yml  win10.dsc.yml  win11-apps.dsc.yml  win11-configs.dsc.yml  win11.dsc.yml
csharp/: csharp.slnx
data/: .env.windows  README.md  The_Oxford_3000.txt  The_Oxford_5000.txt  about_Fedora.md  channels.txt  commands.txt  curTagNames.csv  fd.json  github.txt  globalTools.yml  gnome-shell-extensions.dconf.ini  hyperfine.json  meta.yml  nix-manged.list  notes.md  npm.txt  pkgs.yml  rel.json  releases.yml  repos.txt  stars.yml  tagNames.csv
fork/: go.mod
gql/: latest.gql  limit.gql  release.gql
jq/: pkgs.jq
lib/: array.sh  color.sh  gql.sh  packer-registry.schema.json
lua/: test.lua
ps1/: z.ps1  (+8 more)
(+505 files in other folders)
